@@ -1,3 +1,9 @@
+2006-11-20  Ingo Feinerer  <h0125130@wu-wien.ac.at>
+
+	* R/: Various fixes in handling metadata.
+
+	* R/: Added update mechanism for text document collections.
+
 2006-11-19  Ingo Feinerer  <h0125130@wu-wien.ac.at>
 
 	* R/: Merging of document collections now creates a binary tree
